styling og tekstjusteringer

--- a/src/ui/components/period-list/periodList.less
+++ b/src/ui/components/period-list/periodList.less
@@ -7,6 +7,10 @@
         border-bottom: 1px solid #b0b0b0;
         padding: 1.5rem 0rem 1.5rem 0rem;
 
+        &:first-of-type {
+            border-top: 1px solid #b0b0b0;
+        }
+
         &__title {
             display: flex;
             margin-bottom: 1rem;
@@ -16,9 +20,5 @@
                 top: 2px;
             }
         }
-    }
-
-    &__element:first-child {
-        padding-top: 0;
     }
 }
