--- a/src/ui/components/kompletthetsoversikt/kompletthetsoversikt.less
+++ b/src/ui/components/kompletthetsoversikt/kompletthetsoversikt.less
@@ -3,3 +3,19 @@
         max-width: 100%;
     }
 }
+
+.kompletthet {
+    &__mainHeading {
+        font-size: 1.375rem;
+    }
+
+    &__subHeading {
+        font-size: 1.125rem;
+        margin: 1.25rem 0 1.625rem;
+    }
+
+    &__list {
+        margin: 0;
+        padding-left: 1.5rem;
+    }
+}
