--- a/src/ui/components/period-list/periodList.less
+++ b/src/ui/components/period-list/periodList.less
@@ -5,7 +5,7 @@
 
     &__element {
         border-bottom: 1px solid #b0b0b0;
-        padding: 1.5rem 0rem 1.5rem 0rem;
+        padding: 1.5rem 0rem 2.1875rem 0rem;
 
         &:first-of-type {
             border-top: 1px solid #b0b0b0;
@@ -20,5 +20,9 @@
                 top: 2px;
             }
         }
+    }
+
+    &__alertstripe {
+        margin: 2.4375rem 0 1.6875rem 0;
     }
 }
