--- a/src/ui/components/fortsett-uten-inntektsmelding-form/fortsettUtenInntektsMeldingForm.less
+++ b/src/ui/components/fortsett-uten-inntektsmelding-form/fortsettUtenInntektsMeldingForm.less
@@ -1,5 +1,11 @@
-.fortsettUtenInntektsmelding__panel {
-    border: 2px solid #ff9100;
-    padding: 25px;
-    margin: 25px 0 11px 0;
+.fortsettUtenInntektsmelding {
+    &__panel {
+        border: 2px solid #ff9100;
+        padding: 25px;
+        margin: 25px 0 11px 0;
+    }
+    &__knapper {
+        display: flex;
+        gap: 1rem;
+    }
 }
