fjerner egen alertstripe, overrider heller CSS

--- a/src/ui/components/period-list/periodList.less
+++ b/src/ui/components/period-list/periodList.less
@@ -21,4 +21,16 @@
             }
         }
     }
+
+    &__alertstripe {
+        margin: 2.4375rem 0 1.6875rem 0;
+
+        div {
+            max-width: unset !important;
+            button {
+                float: right;
+                margin-right: 30px;
+            }
+        }
+    }
 }
