refaktorering for å rydde litt

--- a/src/ui/components/period-list/periodList.less
+++ b/src/ui/components/period-list/periodList.less
@@ -29,7 +29,7 @@
             max-width: unset !important;
             button {
                 float: right;
-                margin-right: 30px;
+                margin-right: 1.8rem;
             }
         }
     }
