--- a/src/ui/components/kompletthetsoversikt/kompletthetsoversikt.less
+++ b/src/ui/components/kompletthetsoversikt/kompletthetsoversikt.less
@@ -21,4 +21,18 @@
     &--margin-top {
         margin-top: 1.5rem;
     }
+    &__info {
+        background: inherit;
+        border: none !important;
+        
+        span {
+            font-size: 18px !important;
+        }
+
+        &:hover {
+            border: none;
+            box-shadow: none;
+        }
+
+    }
 }
