--- a/src/ui/components/kompletthetsoversikt/kompletthetsoversikt.less
+++ b/src/ui/components/kompletthetsoversikt/kompletthetsoversikt.less
@@ -22,17 +22,16 @@
         margin-top: 1.5rem;
     }
     &__info {
-        background: inherit;
+        background: inherit !important;
         border: none !important;
-        
+
         span {
             font-size: 18px !important;
         }
 
         &:hover {
-            border: none;
-            box-shadow: none;
+            border: none !important;
+            box-shadow: none !important;
         }
-
     }
 }
