--- a/src/ui/components/fortsett-uten-inntektsmelding-form/fortsettUtenInntektsMeldingForm.less
+++ b/src/ui/components/fortsett-uten-inntektsmelding-form/fortsettUtenInntektsMeldingForm.less
@@ -1,8 +1,8 @@
 .fortsettUtenInntektsmelding {
     &__panel {
         border: 2px solid #ff9100;
-        padding: 25px;
-        margin: 25px 0 11px 0;
+        padding: 1.5625rem;
+        margin: 1.5625rem 0 0.6875rem 0;
     }
     &__knapper {
         display: flex;
