--- a/src/ui/components/fortsett-uten-inntektsmelding-form/fortsettUtenInntektsMeldingForm.less
+++ b/src/ui/components/fortsett-uten-inntektsmelding-form/fortsettUtenInntektsMeldingForm.less
@@ -11,4 +11,42 @@
     &__begrunnelse-subtext {
         font-weight: 400;
     }
+
+    &__radiogroup {
+        margin-top: 1rem;
+
+        :global(legend) {
+            position: absolute;
+            overflow: hidden;
+            clip: rect(0 0 0 0);
+            height: 1px;
+            width: 1px;
+            margin: -1px;
+            padding: 0;
+            border: 0;
+        }
+    }
+
+    &__radiogroupHeading {
+        margin-bottom: 1rem;
+    }
+
+    &__radiogroupAlert {
+        ul {
+            list-style-type: disc;
+            margin: 0;
+            padding-left: 1.5rem;
+        }
+
+        :global(.navds-alert__wrapper) {
+            max-width: none;
+        }
+    }
+}
+
+.radiogroupAlert {
+    &__emphasize {
+        font-weight: bold;
+        text-decoration: underline;
+    }
 }
