--- a/src/ui/components/period-list/periodList.less
+++ b/src/ui/components/period-list/periodList.less
@@ -27,6 +27,7 @@
 
         div {
             max-width: unset !important;
+            width: 100%;
             button {
                 float: right;
                 margin-right: 1.8rem;
